--- a/index-2.html
+++ b/index-2.html
@@ -70,7 +70,9 @@
                 <div class="col-lg-12">
                     <div class="header-top d-flex justify-content-between align-items-center">
                         <div class="header-top-logo">
-                            <a href="#"><img src="assets/images/logo-3.png" alt="logo"></a>
+                            <a href="#">
+                                <img width="100" src="assets/images/logo_apu.png" alt="logo">
+                            </a>
                         </div>
                         <div class="header-top-info d-flex align-items-center">
                             <div class="location-item d-none d-lg-block">
